--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
         <img src="assets/alchemy-logo.png" alt="Alchemy Code Lab Logo">
         <h1>Topic</h1>
     </header>
-    
+    <main>
+        <ul id="image-list">
+            <li>
+                <h3>UniWhal</h3>
+                <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg">
+            </li>
+            <li>
+                <h3>UniLego</h3>
+                <img src="https://images.unsplash.com/photo-1518946222227-364f22132616?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4836a6fca62e7dce9324346bacfde085&auto=format&fit=crop&w=2534&q=80">
+            </li>
+            <li>
+                <h3>Smaug</h3>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Smaug_par_David_Demaret.jpg/290px-Smaug_par_David_Demaret.jpg">
+            </li>
+        </ul>
+    </main>
     <script type="module" src="src/index.js"></script>
 </body>
 </html>
