--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
 </head>
 <body>
     <header>
-        <img src="assets/alchemy-logo.png" alt="Alchemy Code Lab Logo">
-        <h1>Topic</h1>
+        <h1>Images</h1>
     </header>
+    <main>
+        <ul>
+            <li>
+                <h2>UniWhal</h2>
+                <img id="UniWhal" src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg" alt="A unicorn and a narwhal nuzzling their horns">
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <h2>Rhino Family</h2>
+                <img id="Rhino-Family" src="https://images.unsplash.com/photo-1512636618879-bbe79107e9e3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd9460ee6d1ddbb6b1ca7be86dfc4590&auto=format&fit=crop&w=1825&q=80" alt="Mother (or father) rhino with two babies">
+            </li>
+        </ul>
+    </main>
     
     <script type="module" src="src/index.js"></script>
 </body>
