removed the hard coded image containers

--- a/index.html
+++ b/index.html
@@ -9,22 +9,7 @@
 <body>
 
     <main>
-
-      <ul id="image-list">
-        <li>
-          <h2>UniWhal</h2>
-          <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg" alt="image">
-        </li>
-        <li>
-          <h2>UniWhal</h2>
-          <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg" alt="image">
-        </li>
-        <li>
-          <h2>UniWhal</h2>
-          <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg" alt="image">
-        </li>
-    </ul>
-
+      <ul id="image-list"></ul>
     </main>
     
 <script type="module" src="./src/main.js">  </script>
