--- a/index.html
+++ b/index.html
@@ -11,21 +11,9 @@
     <header></header>
     <main>
         <ul id="image-list">
-            <li>
-                <h2>This Animal</h2>
-                <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg">
-            </li>
-            <li>
-                <h2>Another Animal</h2>
-                <img src="https://images.unsplash.com/photo-1512636618879-bbe79107e9e3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd9460ee6d1ddbb6b1ca7be86dfc4590&auto=format&fit=crop&w=1825&q=80">
-            </li>
-            <li>
-                <h2>Yet Another Animal</h2>
-                <img src="https://vignette.wikia.nocookie.net/landbeforetime/images/c/c3/Cera_infobox.png/revision/latest?cb=20180422005003">
-            </li>
         </ul>
     </main>
     <footer></footer>
-    <script src="./src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
 </body>
 </html>
