--- a/test/index.html
+++ b/test/index.html
@@ -11,5 +11,6 @@
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.9.1.js"></script>
   <script type="module" src="tests.js"></script>
+  <script type="module" src="./make-image-template.test.js"></script>
 </body>
 </html>
