--- a/index.html
+++ b/index.html
@@ -5,27 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Document</title>
+    <title>Emily's Art</title>
 </head>
 <body>
     <header><h1>emily's art</h1></header>
     <main>
         <ul id="image-list">
-            <li>
-                <h2>cityscape</h2>
-                <img src="https://c2.staticflickr.com/4/3195/2894076620_42869680eb_o.jpg">
-            </li>
-            <li>
-                <h2>bird</h2>
-                <img src="https://c2.staticflickr.com/4/3145/3076337106_7bffa9f922_b.jpg">
-            </li>
-            <li>
-                <h2>love house</h2>
-                <img src="https://c1.staticflickr.com/3/2490/4253119696_ccd1d032ed_b.jpg">
-            </li>
         </ul>
     </main>
     <footer></footer>
-<script type="module" src="index.js"></script>
+<script type="module" src="../src/index.js"></script>
 </body>
 </html>
