--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <ul id="image-container">
             <li>
-                <p>Uni-Whale</p>
+                <p>UniWhal</p>
                 <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg">
             </li>
             <li>
