--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <ul id="image-gallery">
-        <li>
-            <h2>Horned Animal Galery</h2>
-            <img src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg">
-        </li>
     </ul>
     
+
+
+    <script type="module" src="src/index.js"></script>
 </body>
 </html>
