--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Images</h1>
     </header>
     <main>
-        <ul>
+        <ul id="image-list">
             <li>
                 <h2>UniWhal</h2>
                 <img id="UniWhal" src="http://3.bp.blogspot.com/_DBYF1AdFaHw/TE-f0cDQ24I/AAAAAAAACZg/l-FdTZ6M7z8/s1600/Unicorn_and_Narwhal_by_dinglehopper.jpg" alt="A unicorn and a narwhal nuzzling their horns">
